--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,22 @@
 [versions]
-agp = "8.12.0"
+agp = "8.13.0"
 core = "4.6.2"
-hilt = "2.57"
+ksp = "2.2.20-2.0.3"
+hilt = "2.57.2"
 fragmentKtx = "1.8.9"
-kotlin = "2.2.0"
+kotlin = "2.2.21"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 appcompat = "1.7.1"
-lifecycleProcess = "2.9.2"
-loggingInterceptor = "5.1.0"
-material = "1.12.0"
-activity = "1.10.1"
+lifecycleProcess = "2.9.4"
+loggingInterceptor = "5.3.0"
+material = "1.13.0"
+activity = "1.11.0"
 constraintlayout = "2.2.1"
 retrofit = "3.0.0"
-roomRuntime = "2.7.2"
+roomRuntime = "2.8.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -43,3 +44,4 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
